--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-image: url(/Assets/439626.jpg);
+    background-size: cover;
     font-size: 5rem;
 }
 .background{
@@ -28,6 +29,7 @@ body{
     inset: 0.25rem;
     background-color: black;
     border-radius: 0.4rem;
+    /* mask-image: 2rem 2rem 2rem 2rem;*/
 }
 
 .main::before{
